--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 My first oficial Open Source project. Is a Task Manager using GeoLocation from GPS Android Devices. click to edit
 
-ll
+Author :nRiKe D’az
